--- a/Chords.Android/Chords.Android.csproj
+++ b/Chords.Android/Chords.Android.csproj
@@ -53,15 +53,36 @@
     <Reference Include="Xamarin.Android.Support.v7.AppCompat">
       <HintPath>..\packages\Xamarin.Android.Support.v7.AppCompat.20.0.0.2\lib\MonoAndroid10\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
     </Reference>
+    <Reference Include="PortableRazor">
+      <HintPath>..\packages\PortableRazor.1.3.0.0\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\PortableRazor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Model1.cs" />
     <Compile Include="Views\RazorView.cs">
       <DependentUpon>RazorView.cshtml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ShowChordView.cs">
+      <DependentUpon>ShowChordView.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ShowChordModel.cs" />
+    <Compile Include="Views\FindChordView.cs">
+      <DependentUpon>FindChordView.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ChordParams.cs" />
+    <Compile Include="Models\ShowChordResultModel.cs" />
+    <Compile Include="Models\ChordDecorator.cs" />
+    <Compile Include="Models\GuitarChordLayoutDecorator.cs" />
+    <Compile Include="Views\ShowChordResultView.cs">
+      <DependentUpon>ShowChordResultView.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShowChordLayoutsView.cs">
+      <DependentUpon>ShowChordLayoutsView.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ShowChordLayoutsModel.cs" />
+    <Compile Include="Models\FindChordModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -70,8 +91,25 @@
     <None Include="Views\RazorView.cshtml">
       <Generator>RazorTemplatePreprocessor</Generator>
       <CustomToolNamespace>Chords.Android</CustomToolNamespace>
+      <LastGenOutput>RazorView.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
+    <None Include="Views\ShowChordView.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>ShowChordView.cs</LastGenOutput>
+    </None>
+    <None Include="Views\FindChordView.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>FindChordView.cs</LastGenOutput>
+    </None>
+    <None Include="Views\ShowChordResultView.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>ShowChordResultView.cs</LastGenOutput>
+    </None>
+    <None Include="Views\ShowChordLayoutsView.cshtml">
+      <Generator>RazorTemplatePreprocessor</Generator>
+      <LastGenOutput>ShowChordLayoutsView.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml" />
@@ -87,6 +125,17 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\style.css" />
+    <AndroidAsset Include="Assets\bootstrap.min.css" />
+    <AndroidAsset Include="Assets\bootstrap.min.js" />
+    <AndroidAsset Include="Assets\jquery.min.js" />
+    <AndroidAsset Include="Assets\bootstrap-toggle.min.css" />
+    <AndroidAsset Include="Assets\bootstrap-toggle.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chords.Core\Chords.Core.csproj">
+      <Project>{E0ACB662-E9E3-4BA6-A258-F669D33EB99A}</Project>
+      <Name>Chords.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
