--- a/Chords.Android/Chords.Android.csproj
+++ b/Chords.Android/Chords.Android.csproj
@@ -56,14 +56,17 @@
     <Reference Include="PortableRazor">
       <HintPath>..\packages\PortableRazor.1.3.0.0\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\PortableRazor.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\RazorView.cs">
-      <DependentUpon>RazorView.cshtml</DependentUpon>
-    </Compile>
     <Compile Include="Views\ShowChordView.cs">
       <DependentUpon>ShowChordView.cshtml</DependentUpon>
     </Compile>
@@ -87,16 +90,12 @@
       <DependentUpon>CircleView.cshtml</DependentUpon>
     </Compile>
     <Compile Include="Models\CircleModel.cs" />
+    <Compile Include="Favorites.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
-    <None Include="Views\RazorView.cshtml">
-      <Generator>RazorTemplatePreprocessor</Generator>
-      <CustomToolNamespace>Chords.Android</CustomToolNamespace>
-      <LastGenOutput>RazorView.cs</LastGenOutput>
-    </None>
     <None Include="packages.config" />
     <None Include="Views\ShowChordView.cshtml">
       <Generator>RazorTemplatePreprocessor</Generator>
@@ -145,6 +144,8 @@
     <AndroidAsset Include="Assets\jquery.min.js" />
     <AndroidAsset Include="Assets\bootstrap-toggle.min.css" />
     <AndroidAsset Include="Assets\bootstrap-toggle.min.js" />
+    <AndroidAsset Include="Assets\jquery.mobile-1.4.5.min.css" />
+    <AndroidAsset Include="Assets\jquery.mobile-1.4.5.min.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Chords.Core\Chords.Core.csproj">
