--- a/Chords.Core/Chords.Core.csproj
+++ b/Chords.Core/Chords.Core.csproj
@@ -12,5 +12,6 @@
   <ItemGroup>
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Parallel" Version="4.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 </Project>
